# beastwords

./: README.md  pyproject.toml
src/beastwords/: __init__.py  main.py  sitedistr.py  utils.py
tests/: conftest.py  misc1.xml  overall-covarion-no_mutationrate.xml  overall-covarion.xml  overall-ctmc.xml  overall.nex  partition-covarion.xml  partition-ctmc.xml  test_beastwords.py  test_misc.py  test_utils.py  words-covarion.xml  words-ctmc.xml  words.nex
