[project]
name = "beastwords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.workspace]
members = [
    "beastwords",
]

[project.scripts]
beastwords = "beastwords.main:main"
beastsitedistr = "beastwords.sitedistr:main"

[project.optional-dependencies]
test = ["pytest"]
